--- a/HERORM2020-Sentinel/gimbal/CMakeLists.txt
+++ b/HERORM2020-Sentinel/gimbal/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5.1)
-project(HERORM2020_GIMBLE)
+project(HERORM2020_GIMBAL)
 
 set(CMAKE_CXX_STANDARD 14)
 set(OpenCV_DIR /usr/local/share/OpenCV)
@@ -10,7 +10,7 @@ include_directories(./include
     ${OpenCV_INCLUDE_DIRS}
 )
 
-add_executable(HERORM2020_GIMBLE
+add_executable(HERORM2020_CHASSIS
     src/main.cpp
     include/base.h
     include/timer.h
@@ -35,7 +35,7 @@ add_executable(HERORM2020_GIMBLE
     src/cannode.cpp
 )
 
-target_link_libraries(HERORM2020_GIMBLE
+target_link_libraries(HERORM2020_CHASSIS
     ${OpenCV_LIBRARIES}
     -pthread
     -lMVSDK
