步兵代码最终整合版
在之前的框架基础上整合了大风车代码并解决了CUDA畸变校正代码问题的最终步兵代码。

--- a/HERORM2020/CMakeLists.txt
+++ b/HERORM2020/CMakeLists.txt
@@ -31,6 +31,8 @@ add_executable(HERORM2020
     src/predictor.cpp
     include/cannode.h
     src/cannode.cpp
+    include/an_predictor.h
+    src/an_predictor.cpp
     include/workspace.h
     src/workspace.cpp
 )
