--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,8 @@ add_executable(HERORM2020
     src/runesolver.cpp
     include/workspace.h
     src/workspace.cpp
+    include/predictor.h
+    src/predictor.cpp
 )
 
 target_link_libraries(HERORM2020
